# AlgorthimEng

./: CMakeLists.txt  git.ignore  main.cpp
assigment1/: MonteCarlo.cpp  MonteCarlo.h  bericht.md  main_assigment1.cpp
assigment10/: bericht.md
assigment11/: bericht.md
assigment2/: MonteCarloFor.cpp  MonteCarloFor.h  bericht.md  main_assigment2.cpp
assigment3/: Test1.cpp  Test2.cpp  bericht.md  main_assigment3.cpp  pi_monte_carlo_with_LCG.cpp  pi_monte_carlo_with_LCG.h
assigment4/: benchmark.cpp  benchmark.h  bericht.md  main_assigment4.cpp  min_max_quicksort.cpp  min_max_quicksort.h  plot_speedup.py  results.csv
assigment5/: CMakeLists.txt
assigment5/catch/: CMakeLists.txt  catch_tests_fizzbuzz.cpp
assigment5/fizzbuzz/: CMakeLists.txt
assigment5/fizzbuzz/include/: fizzbuzz.h
assigment5/fizzbuzz/src/: fizzbuzz.cpp
assigment5/quantpng/: CMakeLists.txt
assigment5/quantpng/lodepng/: CMakeLists.txt
assigment5/quantpng/quantize/: CMakeLists.txt
assigment6/: bericht.md
assigment7/: bericht.md
assigment8/: bericht.md
assigment9/: bericht.md
project/: CMakeLists.txt  projectArchticure.md
project/io/: ppm_reader.cpp  ppm_reader.h  token_reader.cpp
project/src/image/: colorspace.cpp  colorspace.h  image_gray.cpp  image_gray.h
project/src/io/: ppm_reader.cpp  ppm_reader.h  ppm_writer.cpp  ppm_writer.h  token_reader.h
project/src/main/: main.cpp
project/src/ops/: background_estimate.cpp  background_estimate.h  background_remove.cpp  background_remove.h  border_cleanup.cpp  border_cleanup.h  contrast_stretch.cpp  contrast_stretch.h  denoise_median.cpp  denoise_median.h  morphology.cpp  morphology.h  threshold_nick.cpp  threshold_nick.h  threshold_otsu.cpp  threshold_otsu.h  threshold_sauvola.cpp  threshold_sauvola.h  threshold_su.cpp  threshold_su.h
project/src/util/: args_parser.cpp  args_parser.h  clamp.h  logging.cpp  logging.h  timing.cpp  timing.h
project/tests/: CMakeLists.txt
project/tests/io/: test_ppm_io.cpp
project/tests/ops/: test_median.cpp  test_otsu.cpp  test_sauvola.cpp
